begin styling dropdown menus,  swapped out .clearfix for one w/o overflow:hidden to prevent clipping of content child elem

--- a/site/stylesheets/scss/styles.scss
+++ b/site/stylesheets/scss/styles.scss
@@ -94,7 +94,6 @@
 // ==========================================================================
 
 
-//END NEW STYLES//
 .link-list {
     list-style-type: none;
     margin: 0;
@@ -123,7 +122,8 @@
     font-family: $Lato;
     text-transform: uppercase;
         .arrow {
-        display: inline-block;
+        display: none;
+        //display: inline-block;
         position: relative;
         margin: 0 0 1px 5px;
         width: 11px;
@@ -131,16 +131,17 @@
         background: transparent url("../../images/sprites.png") no-repeat;
         background-position: -80px -480px;
         }
-        .link-item--expanded a .txt {
+        .link-item--dresses a .txt {
         color: $defaultGrey;
         }
 }
-.link-item .link-item--active a .txt {
+.link-item .link-item--shop-by-shape a .txt {
     color: $pink;
 }
-.link-item--active {
+.link-item--shop-by-shape {
         .arrow {
-        display: inline-block;
+        display:none;
+        //display: inline-block;
         position: relative;
         margin: 0 0 1px 5px;
         width: 11px;
@@ -182,7 +183,7 @@ ul.link-list li li  ul.link-sublist {
     }  
 
 }
-.link-item .link-sublist .link-item .link-sublist .link-item--active .link-item .link {
+.link-item .link-sublist .link-item .link-sublist .link-item--shop-by-shape .link-item .link {
     display: block;
     padding-left: 45px;
     &:hover {
@@ -200,26 +201,37 @@ ul.link-list li li  ul.link-sublist {
     margin: 0 0 15px 0;   
 }
 
-//NEW STYLES//
+// ==========================================================================
+// ASIDE NAVIGATION HOVER STYLES
+// ==========================================================================
+
 ul.link-list li.link-item ul.link-sublist {
     top:auto;
 }
-
-
 ul.link-list li:hover ul li ul.link-sublist,
 ul.link-list li:hover ul li ul li ul.link-sublist,
 ul.link-list li:hover ul li ul li ul li ul.link-sublist {
-
     display:none;
 }
-
 ul.link-list li ul:hover li ul.link-sublist,
-ul.link-list li  ul:hover li li:hover ul.link-sublist,
-
-  {
+ul.link-list li  ul:hover li li:hover ul.link-sublist {
     display: block;
-
 }
+
+// ===================================================
+// ASIDE NAVIGATION ARROWS HOVER 
+// ===================================================
+//GREY
+ul.link-list li ul:hover li a.link span.arrow {
+    display: inline-block;   
+}
+//PINK
+ul.link-list li ul:hover li li a.link span.arrow {
+    display: inline-block;    
+}
+// ===================================================
+//PERSISTENT ARROWS
+// ===================================================
 
 // ==============
 // ASIDE TRENDS
